# CS240H---Lab-1

./: .gitignore  Helloworld.hs  README.md  Setup.hs  lab1.cabal  lab1.hs
input/: bar  foo
src/: Lab1.hs  lab1.hs
