Name:                lab1
Version:             0.1
Description:         Simple Implementation of Lab1 for CS240H
License:             GPL
Author:              Brennan Saeta
Maintainer:          saeta@cs.stanford.edu
Build-Type:          Simple
Homepage:            https://github.com/saeta/CS240H---Lab-1
Cabal-Version:       >= 1.2
Category:            Learning
Synopsis:            Teaching myself some Haskell!

Executable lab1-saeta
  Main-is:           lab1.hs
  Ghc-options:       -Wall
  HS-Source-Dirs:    src
  Build-Depends:     base, haskell98
